<?xml version="1.0"?>
<package format="2">
    <name>motion_model_debugger</name>
    <version>0.1.0</version>
    <description>Package to debug motion model using particles in ROS2</description>

    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <!-- Dependências principais -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_depend>vineslam</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>vineslam</exec_depend>

    <!-- Dependências para testes (opcional) -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>